--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
 repository: Jaeminst/jaeminst.github.io
-favicon: images/favicon.ico
+favicon: images/icon.ico
 
 # Content configuration version
 version: 2
@@ -9,7 +9,9 @@ version: 2
 name: 이재민
 title: Junior DevOps Engineer
 email: jm1225@kakao.com
-website: www.github.com/Jaeminst/jaeminst.github.io
+phone: 010-9900-1225
+website: https://velog.io/@jm1225
+website_title: Blog
 
 # Dark Mode (true/false/never)
 darkmode: false
@@ -22,7 +24,7 @@ github_username:  Jaeminst
 # facebook_username: jekyll
 # flickr_username: jekyll
 # instagram_username: jameswgrant
-linkedin_username: jaeminlee-이재민
+linkedin_username: jaeminst
 # xing_username: jekyll
 # pinterest_username: jekyll
 # youtube_username: globalmtb
@@ -48,9 +50,7 @@ linkedin_username: jaeminlee-이재민
 # about_title: About Me
 about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
-  Hi, my name's Brett and I'm a senior network system administrator. As well as administrating systems I also have experience making software and web apps. I have worked at a number of companies gaining teamwork and leadership skills.
-
-  I am most skilled in: <mark>AWS</mark> and <mark>Eating Pizza</mark>
+  나를 소개하기
 
 content:
   - title: Projects # Title for the section
@@ -76,29 +76,49 @@ content:
     layout: list # Type of content section (list/text)
     content:
       - layout: left
-        title: The Boring Company
-        link: boringcompany.com
-        # link_text: boringcompany.com
-        sub_title: Senior Network System Administrator
-        caption: November 2017 - Present
+        title: 회사명
+        link: https://google.com
+        sub_title: DevOps Engineer
+        caption: 2022.02 ~ 현재
         quote: >
-          Solving 21st century problems by diging holes and making game changing products like the *not a flamethrower*
+          노베이스로 시작하는 개발자 학습서비스
         description: | # this will include new lines to allow paragraphs
-            Every company needs its networks properly administered and The Boring Compay is no exception. Digging holes is hard and I play my part making sure the whole company stays connected. I lead a team of 5 people and enjoy driving the company to try new technologies.
+          * 여기에 내용을 리스트
+          * 하면 된다요~!
 
   - title: Education # Title for the section
     layout: list # Type of content section (list/text)
     content:
       - layout: left
-        title: Harvard University
-        caption: 2010 - 2013
-        sub_title: BSc Computer Science
+        title: 코드스테이츠 부트캠프
+        caption: 2022.02 ~ 2022.06
+        sub_title: DevOps 1기
         quote: >
-          Established in 1636, Harvard is the oldest higher education institution in the United States, and is widely regarded in terms of its influence, reputation, and academic pedigree as a leading university in not just the US but also the world.
+          AWS와 함께 배우는 DevOps
         description: | # this will include new lines to allow paragraphs
-          During my time at Harvard I learnt most of my key skills that have I have taken through my career such as teamwork and working to tight deadlines. I thouroughly enjoyed my time as university and learnt a lot about a healthy work life balance.
+          * 여기에 배운 내용들
+          * 쓰면 된다요~!
 
-          I spent a lot of my free time as a committee member of the *Harvard Mountaineering Club* taking on roles such as *Trip Secretary* and *Vice-President*.
+  - title: Opensource # Title for the section
+    layout: list # Type of content section (list/text)
+    content:
+      - layout: left
+        title: AWS-Configure-Register-Script
+        link: https://github.com/Jaeminst/AWS-Configure-Register-Script
+        quote: >
+          AWS 자격증명과 프로필관리를 한 번에!
+        description: | # this will include new lines to allow paragraphs
+          * 간편하게 프로필과 리전을 설정할 수 있다.
+          * 프로필 생성과 여러가지 기능을 추가할 예정입니다.
+
+      - layout: left
+        title: 개인 블로그
+        link: https://velog.io/@jm1225
+        quote: >
+          개인 기술 블로그
+        description: | # this will include new lines to allow paragraphs
+          * 여기에 블로깅 내용들
+          * 요약하면 된다요~!
 
   - title: A Little More About Me
     layout: text
@@ -109,8 +129,8 @@ content:
       - Knitting
       - [Becoming a ninja](https://www.youtube.com/watch?v=vtg4o__aRMg)
 
-      Look at this cool image  
-      ![Han River](/modern-resume-theme/images/Ttukseom-Island.jpg "Han River")
+      Look at this beautiful night on the han river  
+      ![Han River](images/Ttukseom-Island.jpg "Han River")
 
 # Footer
 footer_show_references: true
