--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ name: 이재민
 title: Junior DevOps Engineer
 email: jm1225@kakao.com
 phone: 010-9900-1225
-website: https://velog.io/@jm1225
+website: velog.io/@jm1225
 website_title: Blog
 
 # Dark Mode (true/false/never)
@@ -50,7 +50,13 @@ linkedin_username: jaeminst
 # about_title: About Me
 about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
-  나를 소개하기
+  DevOps 엔지니어로 제 2의 인생에 도전하는 '이재민' 입니다.
+
+  기계공학 전문학사를 졸업 후, 수배전반과 Busduct/Busway 구조설계와 수배전반 고저압 전기설계를 했었습니다.
+
+  큰 규모의 프로젝트를 끝내고 나서 찾아온 공허함을 채우고싶어서 취미로 프로그램을 만들어 보았습니다.
+
+  그러면서, 제가 좋아하는 일을 하면서 지속적으로 발전할 목표를 찾았습니다.
 
 content:
   - title: Projects # Title for the section
@@ -58,10 +64,12 @@ content:
     content:
       - layout: top-middle
         title: HTTP 프로토콜을 이해하고 API 설계 방법 학습하여 웹 서비스 작성
-        link: github.com/Jaeminst/devops-01-P1-TeamG
+        link: velog.io/@jm1225/G-Team-Project
         # link_text: Project Website
         additional_links:
           - title:  Jaeminst/devops-01-P1-TeamG
+            icon: fab fa-github
+            url: github.com/Jaeminst/devops-01-P1-TeamG
         quote: >
           HTTP 프로토콜을 이해하고 API 설계 방법 학습하여 웹 서비스 작성
         description: | # this will include new lines to allow paragraphs
@@ -72,7 +80,9 @@ content:
         link: velog.io/@jm1225/AWS-ECS-CICD-pjt
         # link_text: Project Website
         additional_links:
-          - title:  Jaeminst/devops-01-P1-TeamG
+          - title:  Jaeminst/devops-01-P2-TeamH
+            icon: fab fa-github
+            url: github.com/Jaeminst/devops-01-P2-TeamH
         quote: >
           AWS ECS, Docker 기반으로 클라우드에 애플리케이션 배포 실습
         description: | # this will include new lines to allow paragraphs
@@ -83,36 +93,40 @@ content:
         link: velog.io/@jm1225/AWS-MSA-pjt
         # link_text: Project Website
         additional_links:
-          - title:  Jaeminst/devops-01-P1-TeamG
+          - title:  Jaeminst/project3-microservices
+            icon: fab fa-github
+            url: github.com/Jaeminst/project3-microservices
         quote: >
           Serverless 기반의 마이크로 서비스 아키텍처 작성 실습
         description: | # this will include new lines to allow paragraphs
           * 세 번째 프로젝트
 
       - layout: top-middle
-        title: 파이널 프로젝트 경험을 작성해주세요.
-        link: https://velog.io/@jm1225/%ED%85%8C%EB%9D%BC%ED%8F%BC%EC%9C%BC%EB%A1%9C-%EB%A7%8C%EB%93%9C%EB%8A%94-EC2%EC%97%90-%ED%99%98%EA%B2%BD%EB%B3%80%EC%88%98-%EC%95%88%EC%A0%84%ED%95%98%EA%B2%8C-%EC%A0%84%EB%8B%AC%ED%95%98%EA%B8%B0
-        link_text: 테라폼으로 만드는 EC2에 환경변수 안전하게 전달하기
+        title: 화물 용달 예약/조회 서비스
+        link: velog.io/@jm1225/테라폼으로-만드는-EC2에-환경변수-안전하게-전달하기
+        # link_text: 테라폼으로 만드는 EC2에 환경변수 안전하게 전달하기
         additional_links:
-          - title:  Jaeminst/devops-01-P1-TeamG
+          - title:  Jaeminst/devops-01-Final-TeamG-scenario1
+            icon: fab fa-github
+            url: github.com/Jaeminst/devops-01-Final-TeamG-scenario1
         quote: >
-          파이널 프로젝트 경험을 작성해주세요.
+          소비자가 예약을 하고 조회할 수 있도록 기본적인 3tier Architechure로 dev환경을 구성함.
         description: | # this will include new lines to allow paragraphs
           * 파이널 프로젝트
 
-  - title: Experience # Title for the section
-    layout: list # Type of content section (list/text)
-    content:
-      - layout: left
-        title: 회사명
-        link: https://google.com
-        sub_title: DevOps Engineer
-        caption: 2022.02 ~ 현재
-        quote: >
-          노베이스로 시작하는 개발자 학습서비스
-        description: | # this will include new lines to allow paragraphs
-          * 여기에 내용을 리스트
-          * 하면 된다요~!
+  # - title: Experience # Title for the section
+  #   layout: list # Type of content section (list/text)
+  #   content:
+  #     - layout: left
+  #       title: 회사명
+  #       link: https://google.com
+  #       sub_title: DevOps Engineer
+  #       caption: 2022.02 ~ 현재
+  #       quote: >
+  #         노베이스로 시작하는 개발자 학습서비스
+  #       description: | # this will include new lines to allow paragraphs
+  #         * 여기에 내용을 리스트
+  #         * 하면 된다요~!
 
   - title: Education # Title for the section
     layout: list # Type of content section (list/text)
@@ -122,10 +136,26 @@ content:
         caption: 2022.02 ~ 2022.06
         sub_title: DevOps 1기
         quote: >
-          AWS와 함께 배우는 DevOps
+          클라우드 서비스 운영과 개발을 한번에! DevOps 부트캠프
         description: | # this will include new lines to allow paragraphs
-          * 여기에 배운 내용들
-          * 쓰면 된다요~!
+          * DevOps에 대한 명확한 정의를 이해
+          * NodeJS 및 개발 환경 구축
+          * 리눅스 운영체제
+          * 웹서비스 개발 기초지식
+          * Git과 버전관리 시스템
+          * Web Apllication Server
+          * 네트워크 기초
+          * Amazon Web Service
+          * Docker
+          * YAML
+          * 지속적 통합
+          * 배포 자동화
+          * 마이크로서비스
+          * 마이크로서비스 작성
+          * Infra as Code
+          * 컨테이너 오케스트레이션
+          * 서비스 모니터링
+          * 성능 테스트
           * [[수강생 인터뷰] 비전공자에서 개발자로 커리어 전환을 꿈꾸는 이재민님 인터뷰](https://velog.io/@jm1225/%EC%88%98%EA%B0%95%EC%83%9D-%EC%9D%B8%ED%84%B0%EB%B7%B0-%EB%B9%84%EC%A0%84%EA%B3%B5%EC%9E%90%EC%97%90%EC%84%9C-%EA%B0%9C%EB%B0%9C%EC%9E%90%EB%A1%9C-%EC%BB%A4%EB%A6%AC%EC%96%B4-%EC%A0%84%ED%99%98%EC%9D%84-%EA%BF%88%EA%BE%B8%EB%8A%94-%EC%9D%B4%EC%9E%AC%EB%AF%BC%EB%8B%98-%EC%9D%B8%ED%84%B0%EB%B7%B0)
 
       - layout: left
@@ -158,7 +188,7 @@ content:
           AWS 자격증명과 프로필관리를 한 번에!
         description: | # this will include new lines to allow paragraphs
           * AWS 관련 CDK를 사용할 때, 자격증명을 편하게 해줍니다.
-          * 간편하게 프로필과 리전을 설정할 수 있다.
+          * 간편하게 프로필과 리전을 설정할 수 있습니다.
           * 프로필 생성과 여러가지 기능을 추가할 예정입니다.
 
   - title: A Little More About Me
