--- a/_config.yml
+++ b/_config.yml
@@ -139,7 +139,7 @@ content:
           클라우드 서비스 운영과 개발을 한번에! DevOps 부트캠프
 
         description: | # this will include new lines to allow paragraphs
-          * [[수강생 인터뷰] 비전공자에서 개발자로 커리어 전환을 꿈꾸는 이재민님 인터뷰](https://velog.io/@jm1225/%EC%88%98%EA%B0%95%EC%83%9D-%EC%9D%B8%ED%84%B0%EB%B7%B0-%EB%B9%84%EC%A0%84%EA%B3%B5%EC%9E%90%EC%97%90%EC%84%9C-%EA%B0%9C%EB%B0%9C%EC%9E%90%EB%A1%9C-%EC%BB%A4%EB%A6%AC%EC%96%B4-%EC%A0%84%ED%99%98%EC%9D%84-%EA%BF%88%EA%BE%B8%EB%8A%94-%EC%9D%B4%EC%9E%AC%EB%AF%BC%EB%8B%98-%EC%9D%B8%ED%84%B0%EB%B7%B0)
+          * [[수강생 인터뷰] 비전공자에서 개발자로 커리어 전환을 꿈꾸는 이재민님 인터뷰](https://velog.io/@jm1225/수강생-인터뷰-비전공자에서-개발자로-커리어-전환을-꿈꾸는-이재민님-인터뷰)
           * DevOps에 대한 명확한 정의를 이해
           * NodeJS 및 개발 환경 구축
           * 리눅스 운영체제
