구체적인 취미 경험

--- a/_config.yml
+++ b/_config.yml
@@ -56,7 +56,7 @@ about_content: | # this will include new lines to allow paragraphs
 
   회사업무를 AutoCAD로 하면서 Lisp을 자연스럽게 접하게 되었고 많은 부분을 자동화 하였습니다.
 
-  큰 규모의 프로젝트를 끝내고 나서 찾아온 공허함을 채우고자 취미로 프로그램을 만들었습니다.
+  취미로 프로그램을 만들면서 MySQL을 활용한 로그인서버를 연동하여 판매를 계획했던 경험도 있습니다.
 
   그러면서, 제가 좋아하는 일을 하면서 지속적으로 발전하는 제 2의 인생을 꿈꾸고 있습니다.
 
