--- a/_config.yml
+++ b/_config.yml
@@ -7,10 +7,10 @@ version: 2
 
 # Personal info
 name: 이재민
-title: Junior DevOps Engineer
-email: jm1225@kakao.com
+title: DevOps Engineer
+email: woals1245@gmail.com
 phone: 010-5968-1225
-website: velog.io/@jm1225
+website: https://velog.io/@jm1225
 website_title: Blog
 
 # Dark Mode (true/false/never)
@@ -50,45 +50,14 @@ google_analytics: "G-T8DKPKKXEG"
 # about_title: About Me
 about_profile_image: images/이재민30x40.png
 about_content: | # this will include new lines to allow paragraphs
-  제 2의 인생으로 DevOps 엔지니어에 도전하는 ‘이재민’ 입니다.
-
-  DevOps 엔지니어의 직무와 업무 자동화에 관심이 많은 저는 100% 적성이 일치한다고 생각합니다.
+  업무 자동화에 관심이 많은 저는 커리어 전환을 목표로 개발에 대한 열정을 가지고 DevOps 부트캠프를 수료하였습니다.
   
-  도면을 AutoCAD로 설계하면서 작업시간을 단축하고자 Lisp을 독학하였고, 취미로 프로그램을 제작하면서 MySQL을 활용한 php언어 기반의 로그인 서버를 연동했던 경험도 있습니다.
+  비전공임에도 작업시간을 단축하고자 Lisp 언어를 독학하면서 프로그래밍에 흥미를 가지게 되었고.
+  프로그램을 제작하고 판매하기 위해서 MySQL을 활용한 php언어 기반의 로그인 서버를 연동했던 경험도 있습니다.
   
   유연한 사고를 바탕으로 다양한 문제에 대처해야 하는 DevOps 엔지니어로서 동료분들과 지식을 공유하고 커뮤니케이션을 좋아하는 저의 강점으로 아름다운 개발문화를 만들고 싶습니다.
 
 content:
-
-  - title: People say about me # Title for the section
-    layout: list # Type of content section (list/text)
-    content:
-      - layout: left
-        title: 코드스테이츠 부트캠프
-        sub_title: DevOps 1기 페어/팀 리뷰
-        caption: 2022.02 ~ 2022.06
-        description: | # this will include new lines to allow paragraphs
-          * 스텝 바이 스텝으로 속도 맞춰서 진행하는 방식이나 조곤조곤한 설명이 좋습니다.
-          * 평소에 본인이 하고 계신 것과 알고 있는 것을 잘 공유해주시고 커뮤니케이션도 원활합니다.
-          * 모르는 것을 질문하면 적극적으로 알려줍니다.
-          * 든든하고, 같이 과제를 진행하는 입장에서 제가 이해가 안 되는 부분은 설명을 잘해줍니다.
-          * 생각하시는 흐름을 따라가는 건 재미있고, 깊이에 감탄하며 같이하다가 보면 같이 성장하는 느낌을 줍니다.
-          * 페어뿐만 아니라 주변 동료까지 잘 챙기셨고, 주어진 것만 하고 끝내는 것이 아니라 다른 것도 이것저것 시도해보며 스스로 학습하시는 점이 좋습니다.
-          * 편안한 분위기에서 과제를 진행할 수 있게 해주었고, 자기 에러가 아닌데도 같이 고민하고 애써 주었습니다.
-
-  # - title: Experience # Title for the section
-  #   layout: list # Type of content section (list/text)
-  #   content:
-  #     - layout: left
-  #       title: 회사명
-  #       link: https://google.com
-  #       sub_title: DevOps Engineer
-  #       caption: 2022.02 ~ 현재
-  #       quote: >
-  #         노베이스로 시작하는 개발자 학습서비스
-  #       description: | # this will include new lines to allow paragraphs
-  #         * 여기에 내용을 리스트
-  #         * 하면 된다요~!
 
   - title: Skill # Title for the section
     layout: list # Type of content section (list/text)
@@ -119,6 +88,14 @@ content:
         description: | # this will include new lines to allow paragraphs
           * MS Excel
           * Lisp, ahk
+
+  - title: Certification # Title for the section
+    layout: list # Type of content section (list/text)
+    content:
+      - layout: left
+        title: AWS
+        description: | # this will include new lines to allow paragraphs
+          * AWS Certified Cloud Practitioner (CLF-C01) - 2022.06.24
 
   - title: Projects # Title for the section
     layout: list # Type of content section (list/text)
@@ -169,20 +146,17 @@ content:
           Serverless 기반의 마이크로 서비스 아키텍처 완성 및 실제 구현
         description: | # this will include new lines to allow paragraphs
           * "자동 재고 확보 시스템" 을 위한 MSA를 구성하는 것을 목표로 하였습니다.
-          * DAY1
-            * Serverless 기반 legacy 시스템 배포 및 테스트 구현
-            * SQS 이용하여 Producer-Consumer 구조 개발 구현
-            * SNS-SQS 환경에서, SNS 발행서버 구현
-            * 마이크로서비스 시나리오 환경구성
-          * DAY2
-            * 성능 테스트
-            * Dead Letter Queue(DLQ) 구현
-            * 다이어그램 작성
-            * Sales API 배포
-            * Stock Empty 람다 배포
-          * DAY3
-            * 공장 REST API 문서 배포를 자동화하기
-            * 공장 서버의 콜백 메시지를 받아 재고를 추가하는 람다를 구현하기
+          * Serverless 기반 legacy 시스템 배포 및 테스트 구현
+          * SQS 이용하여 Producer-Consumer 구조 개발 구현
+          * SNS-SQS 환경에서, SNS 발행서버 구현
+          * 마이크로서비스 시나리오 환경구성
+          * 성능 테스트
+          * Dead Letter Queue(DLQ) 구현
+          * 다이어그램 작성
+          * Sales API 배포
+          * Stock Empty 람다 배포
+          * 공장 REST API 문서 배포를 자동화하기
+          * 공장 서버의 콜백 메시지를 받아 재고를 추가하는 람다를 구현하기
 
       - layout: left
         title: AWS ECS CI/CD
@@ -273,26 +247,77 @@ content:
         quote: >
           설계 전공, 추가활동 사항
         description: | # this will include new lines to allow paragraphs
-          * 2011.06 ~ 2011.12 / 성진지오텍 기술교육원 수료, 담수 플랜트 설계
-          * 2011.09 ~ 2011.12 / 울산천사들의합창 운영진, 자원봉사 및 기부
+          * 2011.09 ~ 2012.09 / 울산천사들의합창 운영진, 자원봉사 및 기부
 
-  - title: Certification # Title for the section
+  - title: People say about me # Title for the section
     layout: list # Type of content section (list/text)
     content:
       - layout: left
-        title: AWS
+        title: 코드스테이츠 부트캠프
+        sub_title: DevOps 1기 페어/팀 리뷰
+        caption: 2022.02 ~ 2022.06
         description: | # this will include new lines to allow paragraphs
-          * AWS Certified Cloud Practitioner (CLF-C01) - 2022.06.24
+          * 평소에 본인이 하고 계신 것과 알고 있는 것을 잘 공유해주시고 커뮤니케이션도 원활합니다.
+          * 페어뿐만 아니라 주변 동료까지 잘 챙기셨고, 주어진 것만 하고 끝내는 것이 아니라 다른 것도 이것저것 시도해보며 스스로 학습하시는 점이 좋습니다.
+          * 편안한 분위기에서 과제를 진행할 수 있게 해주었고, 자기 에러가 아닌데도 같이 고민하고 애써 주었습니다.
 
   - title: A Little More About Me
     layout: text
     content: | # this will include new lines to allow paragraphs
       보안 및 네트워크에 대한 관심과 함께 다른 관심과 취미는 다음과 같습니다.
       - 리액트 관련 학습
-      - 드라마 시청
+      - 자료구조와 알고리즘
+      - 파이썬
 
-      Look at this beautiful night on the han river  
-      ![Han River](images/Ttukseom-Island.jpg "Han River")
+  - title: Link list
+    layout: text
+    content: | # this will include new lines to allow paragraphs
+      - 수강생 인터뷰: [비전공자에서 개발자로 커리어 전환을 꿈꾸는 이재민님 인터뷰](https://velog.io/@jm1225/수강생-인터뷰-비전공자에서-개발자로-커리어-전환을-꿈꾸는-이재민님-인터뷰)
+
+      ---
+
+      - Github: [https://github.com/Jaeminst](https://github.com/Jaeminst)
+
+      ---
+
+      - Linkedin: [https://www.linkedin.com/in/jaeminst](https://www.linkedin.com/in/jaeminst)
+
+      ---
+
+      - Blog: [https://velog.io/@jm1225](https://velog.io/@jm1225)
+
+      ---
+
+      - ShoppingMall 제작
+        - Github: [https://github.com/Jaeminst/react-shoppingmall](https://github.com/Jaeminst/react-shoppingmall)
+
+      ---
+
+      - 화물 용달 예약/조회 앱
+        - Blog: [https://velog.io/@jm1225/테라폼으로-만드는-EC2에-환경변수-안전하게-전달하기](https://velog.io/@jm1225/테라폼으로-만드는-EC2에-환경변수-안전하게-전달하기)
+        - Github: [https://github.com/Jaeminst/devops-01-Final-TeamG](https://github.com/Jaeminst/devops-01-Final-TeamG)
+
+      ---
+
+      - AWS MSA
+        - Blog: [https://velog.io/@jm1225/AWS-MSA-pjt](https://velog.io/@jm1225/AWS-MSA-pjt)
+
+      ---
+
+      - AWS ECS CI/CD
+        - Blog: [https://velog.io/@jm1225/AWS-ECS-CICD-pjt](https://velog.io/@jm1225/AWS-ECS-CICD-pjt)
+        - Github: [https://github.com/Jaeminst/devops-01-P2-TeamH](https://github.com/Jaeminst/devops-01-P2-TeamH)
+        - ssm trouble-shooting: [https://velog.io/@jm1225/AWS-ssm-parameter-trouble-shooting](https://velog.io/@jm1225/AWS-ssm-parameter-trouble-shooting)
+
+      ---
+
+      - ONE SIZE 쇼핑몰
+        - Blog: [https://velog.io/@jm1225/G-Team-Project](https://velog.io/@jm1225/G-Team-Project)
+        - Github: [https://github.com/Jaeminst/devops-01-P1-TeamG](https://github.com/Jaeminst/devops-01-P1-TeamG)
+
+      ---
+
+      - [https://github.com/Jaeminst/AWS-Configure-Register-Script](https://github.com/Jaeminst/AWS-Configure-Register-Script)
 
 # Footer
 footer_show_references: true
