--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ version: 2
 # Personal info
 name: 이재민
 title: DevOps Engineer
-email: woals1245@gmail.com
+email: jm1225@kakao.com
 phone: 010-5968-1225
 website: https://velog.io/@jm1225
 website_title: Blog
